[metadata]
description-file = README.md

[pep8]
max-line-length = 120

[nosetests]
## advanced debug
#verbosity=1
#detailed-errors=1
#debug=nose.loader
## jump into pdb on errors
#pdb=1
#pdb-failures=1
## cobertura style coverage with nosexcover. 
## we're calling this from ci-runtests.sh in order to not require having nosexcover in requirements.txt
#with-xcoverage=1
#cover-package=scapy_ssl_tls
#cover-html=1
#cover-html-dir=cover
#xcoverage-file=cover/cobertura.xml
